dark mode,button,animation fixed 04-05-2024

--- a/src/input.css
+++ b/src/input.css
@@ -431,11 +431,14 @@
       @apply lg:text-[2.7rem];
     }
     .blog__card{
-      @apply bg-lgrey dark:bg-vdark mb-6 rounded-md border-none border-transparent w-full pb-[1.5rem] 
+      @apply bg-primary dark:bg-vdark mb-6 rounded-md border-none border-transparent w-full pb-[1.5rem] 
       lg:w-full lg:rounded-md md:w-full md:mb-[1rem];
     }
     .blog__card img{
       @apply rounded-md w-full md:w-full;
+    }
+    .blog__card img:hover{
+      @apply opacity-80;
     }
     .blog__card ul h3{
       @apply font-normal text-[.9rem] text-[#6a6a6a] dark:text-[#bdbdbd] lg:text-[1rem];
@@ -462,7 +465,7 @@
       @apply px-[1.1rem];
     }
     .card__wrapper{
-      @apply overflow-hidden gap-[1.5rem] lg:grid lg:grid-cols-3 lg:gap-[1.3rem] md:grid md:grid-cols-2 md:gap-[1rem];
+      @apply gap-[1.5rem] overflow-hidden lg:grid lg:grid-cols-3 lg:gap-[1.3rem] md:grid md:grid-cols-2 md:gap-[1rem];
     }
     .blog__btn{
       @apply flex flex-row gap-3 justify-center;
@@ -477,7 +480,7 @@
 
     /* -----------CONTACT----------- */
     .contact{
-      @apply py-[2rem] overflow-hidden;
+      @apply py-[2rem];
     }
     .contact__title p{
       @apply pb-[2rem] lg:max-w-[40rem] lg:text-[.9rem] md:text-[1rem];
@@ -498,25 +501,25 @@
       @apply py-[1rem]
     }
     .contact__form ul li input{
-      @apply bg-lgrey dark:bg-vdark pl-[1rem] py-[1rem] mb-[1rem] w-full outline-none;
+      @apply bg-lgrey dark:bg-vdark dark:text-primary pl-[1rem] py-[1rem] mb-[1rem] w-full outline-none rounded-md;
     }
     .contact__form ul li input::placeholder{
       @apply text-[1rem] text-[#747778] font-semibold;
     }
     .contact__form ul input{
-      @apply bg-lgrey dark:bg-vdark pl-[1rem] py-[1rem] mb-[1rem] w-full outline-none;
+      @apply bg-lgrey dark:bg-vdark dark:text-primary pl-[1rem] py-[1rem] mb-[1rem] w-full outline-none rounded-md;
     }
     .contact__form ul input::placeholder{
       @apply text-[1rem] text-[#747778] font-semibold;
     }
     .contact__form ul textarea{
-      @apply bg-lgrey dark:bg-vdark pl-[1rem] py-[1rem] mb-[1rem] w-full outline-none;
+      @apply bg-lgrey dark:bg-vdark dark:text-primary pl-[1rem] py-[1rem] mb-[1rem] w-full outline-none rounded-md;
     }
     .contact__form ul textarea::placeholder{
       @apply text-[#747778] font-semibold;
     }
     .contact__wrapper{
-      @apply grid grid-cols-1 lg:grid lg:grid-cols-2;
+      @apply overflow-hidden grid grid-cols-1 lg:grid lg:grid-cols-2;
     }
     .contact__form ul:first-child{
       @apply grid grid-cols-1 lg:grid lg:grid-cols-2 lg:gap-[1rem];
@@ -830,14 +833,14 @@ body h1, h2{
   @layer utilities{
     /* ------------------BUTTONS---------------- */
     .btn{
-      @apply inline-block py-[.7rem] px-[1.3rem] rounded-full border-transparent border-[1.5px]
+      @apply inline-block py-[.7rem] px-[1.3rem] rounded-full
       text-[1.1rem] font-bold cursor-pointer relative z-[1] overflow-hidden;
     }
     .btn.bg--vera{
-      @apply bg-secondary text-primary dark:text-vdark;
+      @apply bg-secondary text-primary dark:text-vdark dark:border-[1px] dark:border-secondary;
     }
     .btn.bg--vera:hover{
-      @apply text-clrtitle dark:text-primary;
+      @apply text-clrtitle dark:text-primary bg-transparent dark:border-transparent ease-in-out duration-300;
     }
     .btn.bg--vera::after{
       @apply content-[""] bg-lgrey dark:bg-vdark absolute z-[-1] left-[-20%] right-[-20%] top-0 bottom-0 
@@ -845,7 +848,7 @@ body h1, h2{
 
     }
     .btn.bg--vera:hover::after{
-      @apply skew-x-[-45deg] scale-x-[1] scale-y-[1] transition-all duration-500;
+      @apply skew-x-[-45deg] scale-x-[1] scale-y-[1] transition-all duration-700;
     }
 
     .btn.bg--vera-w{
@@ -878,5 +881,6 @@ body h1, h2{
     .btn.bg--verb:hover::after{
       @apply skew-x-[-45deg] scale-x-[1] scale-y-[1] transition-all duration-500;
     }
+
 
   }
