--- a/src/output.css
+++ b/src/output.css
@@ -923,7 +923,7 @@ a {
   border-style: none;
   border-color: transparent;
   --tw-bg-opacity: 1;
-  background-color: rgb(240 240 240 / var(--tw-bg-opacity));
+  background-color: rgb(248 246 244 / var(--tw-bg-opacity));
   padding-bottom: 1.5rem;
 }
 
@@ -955,6 +955,10 @@ a {
   .blog__card img {
     width: 100%;
   }
+}
+
+.blog__card img:hover {
+  opacity: 0.8;
 }
 
 .blog__card ul h3 {
@@ -1110,7 +1114,6 @@ a {
 /* -----------CONTACT----------- */
 
 .contact {
-  overflow: hidden;
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
@@ -1177,6 +1180,7 @@ a {
 .contact__form ul li input {
   margin-bottom: 1rem;
   width: 100%;
+  border-radius: 0.375rem;
   --tw-bg-opacity: 1;
   background-color: rgb(240 240 240 / var(--tw-bg-opacity));
   padding-top: 1rem;
@@ -1189,6 +1193,8 @@ a {
 .contact__form ul li input:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(33 33 33 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(248 246 244 / var(--tw-text-opacity));
 }
 
 .contact__form ul li input::-moz-placeholder {
@@ -1208,6 +1214,7 @@ a {
 .contact__form ul input {
   margin-bottom: 1rem;
   width: 100%;
+  border-radius: 0.375rem;
   --tw-bg-opacity: 1;
   background-color: rgb(240 240 240 / var(--tw-bg-opacity));
   padding-top: 1rem;
@@ -1220,6 +1227,8 @@ a {
 .contact__form ul input:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(33 33 33 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(248 246 244 / var(--tw-text-opacity));
 }
 
 .contact__form ul input::-moz-placeholder {
@@ -1239,6 +1248,7 @@ a {
 .contact__form ul textarea {
   margin-bottom: 1rem;
   width: 100%;
+  border-radius: 0.375rem;
   --tw-bg-opacity: 1;
   background-color: rgb(240 240 240 / var(--tw-bg-opacity));
   padding-top: 1rem;
@@ -1251,6 +1261,8 @@ a {
 .contact__form ul textarea:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(33 33 33 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(248 246 244 / var(--tw-text-opacity));
 }
 
 .contact__form ul textarea::-moz-placeholder {
@@ -1268,6 +1280,7 @@ a {
 .contact__wrapper {
   display: grid;
   grid-template-columns: repeat(1, minmax(0, 1fr));
+  overflow: hidden;
 }
 
 @media (min-width: 1024px) {
@@ -2141,8 +2154,6 @@ body h1:is(.dark *), h2:is(.dark *) {
   cursor: pointer;
   overflow: hidden;
   border-radius: 9999px;
-  border-width: 1.5px;
-  border-color: transparent;
   padding-top: .7rem;
   padding-bottom: .7rem;
   padding-left: 1.3rem;
@@ -2159,16 +2170,23 @@ body h1:is(.dark *), h2:is(.dark *) {
 }
 
 .btn.bg--vera:is(.dark *) {
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(30 168 79 / var(--tw-border-opacity));
   --tw-text-opacity: 1;
   color: rgb(33 33 33 / var(--tw-text-opacity));
 }
 
 .btn.bg--vera:hover {
+  background-color: transparent;
   --tw-text-opacity: 1;
   color: rgb(64 71 66 / var(--tw-text-opacity));
+  transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn.bg--vera:hover:is(.dark *) {
+  border-color: transparent;
   --tw-text-opacity: 1;
   color: rgb(248 246 244 / var(--tw-text-opacity));
 }
@@ -2205,7 +2223,7 @@ body h1:is(.dark *), h2:is(.dark *) {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 500ms;
+  transition-duration: 700ms;
 }
 
 .btn.bg--vera-w {
